Removed extra options